# cosmos-ibc-watcher

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  chains.example.toml
.github/workflows/: docker.yml  rust.yml
grafana/: ibc-watcher.json
src/: config.rs  error.rs  handle.rs  lib.rs  query.rs  telemetry.rs
tests/config/fixtures/: chains-fail.toml  chains.toml
